feat(S018): implement REST API Foundation — Project / Task / Chat
2 new modules (project, task), 3 REST controllers (chat, session, skill),
schema redesign (4 tables), session model aligned with Spring AI naming,
CLI adapters removed, Tomcat :8080 on localhost. 123 tests pass.

Also includes S023 spec design (session message tree — not yet implemented).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>